<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    
	<LinearLayout 
	    android:id="@+id/ExperimentLayout"
	    android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center">
        
	    <RelativeLayout 
	        android:id="@+id/inTaskInstructions"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_margin="30dp"
	        android:layout_gravity="top">
	        
	        <TextView 
	        	android:id="@+id/inTaskSubtask"
	        	android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:text="@string/TestText"
	        	android:gravity="center_horizontal"
	        	android:layout_gravity="bottom"
	        	android:textSize="25sp"
	        	android:textColor="#1CAF9A"/>
	  
	        <Button 
        	android:id="@+id/OkButton"
        	android:text="@string/OK"
        	android:layout_width="150dp"
        	android:layout_height="75dp"
        	android:layout_alignParentRight="true"/>	        
	    </RelativeLayout>

	    <LinearLayout 
	        android:layout_width="match_parent"
        	android:layout_height="match_parent"
			android:gravity="center">
    		<RelativeLayout
        		android:id="@+id/RelativeLayoutExperimentWidget"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content">
    		</RelativeLayout>
    	</LinearLayout>
    </LinearLayout>
    
	<FrameLayout 
	    android:id="@+id/InstructionLayout"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="@drawable/overlay_bg"
	    android:padding="20dp">
	    
	    <LinearLayout 
	        android:id="@+id/HeaderLayout"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">

	    	
	    	<TextView 
	    	    android:id="@+id/InstructionTitle"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
	    	    android:text="@string/Touch"
	    	    android:textSize="40sp"
	    	    android:layout_marginLeft="10dp"
	    	   	android:textColor="#D1DC48"/>
	    
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:id="@+id/TaskInstructionLayout"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_gravity="center"
	        >
	        
	        	<TextView 
	        		android:id="@+id/TaskType"
	        		android:layout_width="match_parent"
	        		android:layout_height="wrap_content"
	        		android:text="@string/TestText"
	       		 	android:gravity="center_horizontal"
	        		android:layout_gravity="bottom"
	        		android:textSize="30sp"
	        		android:textColor="#1D2939"/>
	        
	        	<TextView 
	        		android:id="@+id/TaskSubtask"
	        		android:layout_width="match_parent"
	        		android:layout_height="wrap_content"
	        		android:text="@string/TestText"
	        		android:gravity="center_horizontal"
	        		android:layout_gravity="bottom"
	        		android:textSize="25sp"
	        		android:textColor="#1CAF9A"/>
	    </LinearLayout>
	    
	    <Button 
        	android:id="@+id/OkButtonOverlay"
        	android:text="@string/OK"
        	android:layout_width="200dp"
        	android:layout_height="100dp"
        	android:layout_gravity="bottom|center"/>
	</FrameLayout>
	
	<FrameLayout 
	    android:id="@+id/ConfigurationScreen"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="@drawable/overlay_bg"
	    android:padding="20dp">
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:orientation="vertical"
	        android:layout_gravity="center">
	        	
	        	<TextView 
	        		android:id="@+id/Welcome"
	        		android:layout_width="wrap_content"
	        		android:layout_height="wrap_content"
	        		android:text="@string/Welcome"
	        		android:textSize="60sp"
	        		android:textColor="#1CAF9A"
	        		android:layout_gravity="top|center"
	        		android:layout_margin="50dp"/>
	        	
	        	
	        	<EditText 
	        		android:id="@+id/VPNumber"
	        		android:layout_width="85dp"
	        		android:layout_height="wrap_content"
	        		android:textSize="40sp"
	        		android:inputType="number"
	        		android:hint="@string/VPNumber"
	        		android:layout_gravity="center"
	        		android:layout_marginBottom="10dp"/>
	        	
	        	
	        	<LinearLayout 
	        	    android:layout_width="wrap_content"
	        		android:layout_height="match_parent"
	        		android:orientation="horizontal"
	        		android:layout_gravity="center">
	        		
	        	    <LinearLayout 
	        	        android:id="@+id/ConditionLayout"
	        	        android:layout_width="wrap_content"
	        	        android:layout_height="wrap_content"
	        	        android:orientation="vertical">
	        	        
	        	        
	        	        <TextView 
	        	            android:layout_width="wrap_content"
	        	            android:layout_height="wrap_content"
	        	            android:textSize="30sp"
	        	            android:text="@string/Condition"
	        				android:textColor="#333333"/>
	        	        
	        	        <RadioGroup 
	        	            android:id="@+id/ConditionPicker"
	        	            android:layout_width="wrap_content"
	        	            android:layout_height="wrap_content"
	        	            android:orientation="vertical">
	        	            
	        	            <RadioButton 
	        	                android:id="@+id/ConditionToch"
	        	            	android:layout_width="wrap_content"
	        	            	android:layout_height="wrap_content"	        	                
	        	                android:text="@string/Touch"
	        	                android:checked="true" />
	        	            
	        	            <RadioButton 
	        	                android:id="@+id/ConditionDDS"
	        	            	android:layout_width="wrap_content"
	        	            	android:layout_height="wrap_content"
	        	                android:text="@string/DDS"/>
	        	            
	        	        </RadioGroup>
	        	        
	        	    </LinearLayout>
	        	    
	        	    <LinearLayout 
	        	        android:id="@+id/StageLayout"
	        	        android:layout_width="wrap_content"
	        	        android:layout_height="wrap_content"
	        	        android:orientation="vertical"
	        	        android:layout_marginLeft="100dp">
	        	        
	        	        <TextView 
	        	            android:layout_width="wrap_content"
	        	            android:layout_height="wrap_content"
	        	            android:textSize="30sp"
	        	            android:text="@string/Stage"
	        				android:textColor="#333333"/>
	        	        
	        	        <Spinner
        					android:id="@+id/StageSpinner"
        					android:layout_width="wrap_content"
        					android:layout_height="wrap_content"
        					android:entries="@array/StageArray"
        					android:prompt="@string/StagePrompt" />
	        	        
	        	        </LinearLayout>

	        	</LinearLayout>

	    </LinearLayout>
	    
	    
	    <Button 
        	android:id="@+id/OkButtonConfiguration"
        	android:text="@string/OK"
        	android:layout_width="200dp"
        	android:layout_height="wrap_content"
        	android:layout_gravity="bottom|center"/>
	    </FrameLayout>
    
   

</FrameLayout>